changed the photos size

--- a/cute_animals.html
+++ b/cute_animals.html
@@ -8,10 +8,10 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
-     <img src="cuteanimals_images/essay-final-gettyimages-685469924.webp" class="imagesize" >
-     <img src="cuteanimals_images/catimg.jpg" class="imagesize" >
-<img src="cuteanimals_images/duckimg.jpg"class="imagesize">
-<img src="cuteanimals_images/rocketimg.jpeg"class="imagesize">   
+ <img src="cuteanimals_images/essay-final-gettyimages-685469924.webp" width="100%"  clas="imagesize" >
+<div><img src="cuteanimals_images/catimg.jpg" class="imagesize" ></div>
+<div><img src="cuteanimals_images/duckimg.jpg"class="imagesize"></div>
+<div><img src="cuteanimals_images/rocketimg.jpeg"class="imagesize">  </div> 
 
 
 
