--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         </a></div>
 
     <div><a href="cute_animals.html">
-        <button type="button" class="buttonsize btn btn-secondary">click here to see cute animals</button></a>
+            <button type="button" class="buttonsize btn btn btn-light">click here to see cute animals</button></a>
     </div>
 
 
     <div><a href="https://www.chess.com/home">
-        <button type="button" class=" right_buttosn buttonsize btn btn-secondary">click to play chess</button></a>
+            <button type="button" class="buttonsize btn btn-dark">click to play chess</button></a>
     </div>
 
 
     <div><a href="https://getbootstrap.com/">
-        <button type="button" class="buttonsize btn btn-secondary">click here to go to Bootstrap </button></a>
+            <button type="button" class="buttonsize btn btn-secondary">click here to go to Bootstrap </button></a>
     </div>
- 
+
 
 </body>
 
